@@ -1,5 +1,10 @@
 {{$NEXT}}
 
+- Fix a bug where a line starting with a tab in the middle of a paragraph
+  caused the Standard dialect parser to error out. Reported by André
+  Walker. GH #25.
+
+
 0.37   2020-07-03
 
 - The markdent-html CLI script now accepts `--file -` for reading Markdown
